tests/pairs/ill-typed/bad-pairs-12.stella
language core;

extend with #pairs;

fn main(x : Nat) -> Nat {
  return {0,0}(0)
}
